--- a/templates/pagina3.html
+++ b/templates/pagina3.html
@@ -5,6 +5,6 @@
     <title>Fundamentos de Programacion</title>
 </head>
 <body>
-<h1>Fundamentos de Programacion</h1>
+<h1>Fundamentos de Programación</h1>
 </body>
 </html>
